# csc7135_proj_sp24

./: .gitignore  COMMANDS.md  Dockerfile  README.md  ROSDISCOVER_NOTES.md  TODO_FETCH_WS.md  TODOs.md  build_source_all.sh  build_source_pkg1.sh  build_source_pkgs.sh
.catkin_tools/profiles/default/: devel_collisions.txt
docker_files/: Dockerfile
log/: latest_build
rosdiscover_yml/: fetch.yml
src/csc7135_pkg1/: CMakeLists.txt  package.xml
src/csc7135_pkg1/include/: robot_class.hpp  robot_controller.hpp  robot_node.hpp  robot_sensor.hpp
src/csc7135_pkg1/launch/: pkg1_bad.launch  pkg1_good.launch
src/csc7135_pkg1/src/: exp1.cpp  fetchcontroller_node.cpp  fetchsensor_node.cpp  robot_class.cpp  robot_controller.cpp  robot_node.cpp  robot_sensor.cpp
src/csc7135_pkg2/: CMakeLists.txt  package.xml
src/csc7135_pkg2/include/: robot_controller.hpp  robot_controller_pkg2.hpp  robot_hardware.hpp
src/csc7135_pkg2/include/csc7135_pkg2/: robot_controller.hpp
src/csc7135_pkg2/launch/: pkg2_exp.launch
src/csc7135_pkg2/src/: fetchcontroller_node.cpp  fetchhardware_node.cpp  fetchsensorbad_node.cpp  robot_controller.cpp  robot_hardware.cpp  robot_sensor.cpp
